--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,9 @@ remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme
 
+sass:
+  sass_dir: assets/css
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
