--- a/_data/navbar.yml
+++ b/_data/navbar.yml
@@ -1,6 +1,6 @@
 nav:
-  - title: Projects
-    url: /projects
+  - title: Work
+    url: /work
   - title: About
     url: /about
   - title: Contact
