--- a/_data/navbar.yml
+++ b/_data/navbar.yml
@@ -1,7 +1,7 @@
 nav:
   - title: Work
     url: /work
-  - title: About
+  - title: About me
     url: /about
   - title: Contact
     url: /contact
